Add placeholder for paper

--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,9 @@ navigation_header:
   url: /
 - title: About
   url: /about/
-# - title: Blog
-#   url: /blog/
+- title: 
+- title: Blog
+  url: /blog/
 
 # Footer nav
 # navigation_footer:
